--- a/env/env.yaml
+++ b/env/env.yaml
@@ -4,7 +4,4 @@ channels:
  - conda-forge
  - nanoporetech
 dependencies:
- - trnascan-se
- - blast
- - bioconda::blast
- - mamba
+ - bioconda::orthofinder
