--- a/env/env.yaml
+++ b/env/env.yaml
@@ -4,4 +4,5 @@ channels:
  - conda-forge
  - nanoporetech
 dependencies:
-  - bioconda::orthofinder
+ - bioconda::blast
+ - bioconda::orthofinder=2.2.7
