--- a/env/env.yaml
+++ b/env/env.yaml
@@ -4,5 +4,4 @@ channels:
  - conda-forge
  - nanoporetech
 dependencies:
- - bioconda::blast
- - bioconda::orthofinder=2.2.7
+  - bioconda::orthofinder
