--- a/env/env.yaml
+++ b/env/env.yaml
@@ -4,7 +4,7 @@ channels:
  - conda-forge
  - nanoporetech
 dependencies:
- - bioconda::blast
+ - bioconda::diamond
  - bioconda::orthofinder=2.2.7
 
 
